Name:                apters
Version:             0.1
Synopsis:            Reproducible, maintainable build tools
Author:              Jamey Sharp and Josh Triplett
Maintainer:          Jamey Sharp <jamey@minilop.net>
Stability:           Experimental
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:
    Store.Base
    Store.Util
    Store.File
  Other-modules:
    Language
    Scanner
    DepsScanner
  Build-depends:
    array,
    base >= 4,
    base < 5,
    bytestring,
    directory,
    enumerator,
    filepath,
    network,
    process,
    random,
    SHA,
    unix
  Build-tools:         alex, happy > 1.18.4